Applied fix for grid icon label overflowing on small desktop

--- a/src/styles/modules/icon-grid.less
+++ b/src/styles/modules/icon-grid.less
@@ -25,6 +25,9 @@
             @media screen and (min-width: @screen-md-max) { // Large desktop
                 font-size: 14px;
             }
+            @media screen and (min-width: @screen-md-min) and (max-width: @screen-lg-min) { // Medium desktop
+                font-size: 12px;
+            }
         }
         .icon {
             margin: 8px auto 0px auto;
